--- a/hello.html
+++ b/hello.html
@@ -4,9 +4,8 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1>
-            Hello, world!
-        </h1>
+        <h1>Hello, world!</h1>
+        <h2>Hello, you!</h2>
         Fortunate to have you in my life!
     </body>
 </html>
