--- a/hello.html
+++ b/hello.html
@@ -4,11 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-<<<<<<< HEAD
-        <h1>Hello, world!!!</h1>
-=======
-        <h1 style="color: blue">Hello, world!</h1>
->>>>>>> dcc2922d8401833d00b3c2070e2ea83ba179bec3
+        <h1 style="color: red">Hello, world!!!</h1>
         <h2>Hello, you!</h2>
         Fortunate to have you in my life!
     </body>
