--- a/hello.html
+++ b/hello.html
@@ -2,9 +2,15 @@
 <html lang="en">
     <head>
         <title>Hello!</title>
+        <style>
+            h1{
+                color: blue;
+                text-align: center;
+            }
+        </style>
     </head>
     <body>
-        <h1 style="color: blue; text-align: center;">Hello, world!!!</h1>
+        <h1>Hello, world!!!</h1>
         <h2>Hello, you!</h2>
         Fortunate to have you in my life!
     </body>
