--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
-        <h1 style="color: blue; text-align: center;">Hello, world!!!</h1>
+        <h1 style="color: blue; text-align: center;">Hello, world!</h1>
         <h2>Hello, you!</h2>
         Fortunate to have you in my life!
     </body>
